fixed build mode of the .wav file to inclde as a seperate file, not packaged

--- a/Tetris_WPF.csproj
+++ b/Tetris_WPF.csproj
@@ -23,7 +23,6 @@
     <None Remove="Assets\purple.png" />
     <None Remove="Assets\Red.png" />
     <None Remove="Assets\S.png" />
-    <None Remove="Assets\swing thing.mp3" />
     <None Remove="Assets\swing thing.wav" />
     <None Remove="Assets\T.png" />
     <None Remove="Assets\Yellow.png" />
@@ -49,8 +48,9 @@
     <Resource Include="Assets\purple.png" />
     <Resource Include="Assets\Red.png" />
     <Resource Include="Assets\S.png" />
-    <Resource Include="Assets\swing thing.mp3" />
-    <Resource Include="Assets\swing thing.wav" />
+    <Content Include="Assets\swing thing.wav">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Resource Include="Assets\T.png" />
     <Resource Include="Assets\Yellow.png" />
     <Resource Include="Assets\Z.png" />
